--- a/Project_Android_Trustbus/TrustBusSe301Project/app/src/main/res/layout/activity_filter_trip.xml
+++ b/Project_Android_Trustbus/TrustBusSe301Project/app/src/main/res/layout/activity_filter_trip.xml
@@ -5,84 +5,71 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/holo_blue_light"
-    tools:context=".FilterTripActivity">
+    tools:context=".FilterTripActivity"
+    tools:layout_editor_absoluteY="81dp">
 
     <Button
         android:id="@+id/setDateButton"
         android:layout_width="71dp"
-        android:layout_height="39dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="34dp"
+        android:layout_marginEnd="19dp"
+        android:layout_marginBottom="15dp"
         android:text="Set"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.087"
+        app:layout_constraintBottom_toTopOf="@+id/toSpinner"
+        app:layout_constraintEnd_toStartOf="@+id/dateTextView"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.317" />
+        app:layout_constraintTop_toBottomOf="@+id/fromSpinner" />
 
     <Button
         android:id="@+id/listButton"
-        android:layout_width="299dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginStart="34dp"
+        android:layout_marginEnd="34dp"
         android:layout_marginBottom="16dp"
         android:text="Lıst"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.376"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView10"
-        app:layout_constraintVertical_bias="0.982" />
+        app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
     <Spinner
         android:id="@+id/fromSpinner"
-        android:layout_width="0dp"
+        android:layout_width="274dp"
         android:layout_height="0dp"
-        android:layout_marginStart="8dp"
         android:layout_marginTop="101dp"
         android:layout_marginEnd="7dp"
-        android:layout_marginBottom="118dp"
+        android:layout_marginBottom="12dp"
         android:background="@android:color/white"
-        app:layout_constraintBottom_toTopOf="@+id/switchOneWay"
+        app:layout_constraintBottom_toTopOf="@+id/setDateButton"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/textView9"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.209"
-        app:layout_constraintVertical_chainStyle="spread_inside" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Spinner
         android:id="@+id/toSpinner"
         android:layout_width="0dp"
-        android:layout_height="42dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="52dp"
-        android:layout_marginEnd="8dp"
+        android:layout_height="0dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
         android:background="@android:color/white"
+        app:layout_constraintBottom_toTopOf="@+id/switchOneWay"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/textView10"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fromSpinner" />
+        app:layout_constraintTop_toBottomOf="@+id/setDateButton" />
 
     <TextView
         android:id="@+id/dateTextView"
-        android:layout_width="212dp"
-        android:layout_height="30dp"
-        android:layout_marginTop="16dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="4dp"
         android:layout_marginEnd="48dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="4dp"
         android:background="@android:color/white"
-        app:layout_constraintBottom_toTopOf="@+id/toSpinner"
+        app:layout_constraintBottom_toBottomOf="@+id/setDateButton"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fromSpinner"
-        app:layout_constraintVertical_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/setDateButton"
+        app:layout_constraintTop_toTopOf="@+id/setDateButton"
         tools:text="@tools:sample/date/ddmmyy" />
 
     <Switch
@@ -90,33 +77,32 @@
         android:layout_width="90dp"
         android:layout_height="0dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="205dp"
+        android:layout_marginBottom="141dp"
         android:checked="true"
         android:text="One Way"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/listButton"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fromSpinner" />
+        app:layout_constraintTop_toBottomOf="@+id/toSpinner" />
 
     <TextView
         android:id="@+id/textView9"
-        android:layout_width="0dp"
+        android:layout_width="42dp"
         android:layout_height="0dp"
-        android:layout_marginStart="61dp"
+        android:layout_marginStart="30dp"
         android:layout_marginTop="101dp"
-        android:layout_marginBottom="77dp"
+        android:layout_marginBottom="86dp"
         android:text="From:"
         app:layout_constraintBottom_toTopOf="@+id/textView10"
-        app:layout_constraintEnd_toStartOf="@+id/fromSpinner"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/setDateButton"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView10"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="61dp"
-        android:layout_marginEnd="9dp"
-        android:layout_marginBottom="208dp"
+        android:layout_width="32dp"
+        android:layout_height="23dp"
+        android:layout_marginStart="67dp"
+        android:layout_marginEnd="3dp"
+        android:layout_marginBottom="206dp"
         android:text="To:"
         app:layout_constraintBottom_toTopOf="@+id/listButton"
         app:layout_constraintEnd_toStartOf="@+id/toSpinner"
