--- a/Project_Android_Trustbus/TrustBusSe301Project/app/src/main/res/layout/activity_add_trip.xml
+++ b/Project_Android_Trustbus/TrustBusSe301Project/app/src/main/res/layout/activity_add_trip.xml
@@ -23,18 +23,20 @@
     <Spinner
         android:id="@+id/addTripActivityFromSpinner"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/textView8"
+        android:layout_height="48dp"
+        android:layout_marginTop="51dp"
+        android:layout_marginBottom="47dp"
+        app:layout_constraintBottom_toBottomOf="@+id/textView8"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Spinner
         android:id="@+id/addTripActivityWhereSpinner"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="30dp"
-        app:layout_constraintBottom_toTopOf="@+id/addTripActivityTextView"
+        android:layout_marginBottom="1dp"
+        app:layout_constraintBottom_toTopOf="@+id/textView13"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView8" />
@@ -43,9 +45,9 @@
         android:id="@+id/textView7"
         android:layout_width="150dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="3dp"
+        android:layout_marginBottom="50dp"
         android:text="From"
-        app:layout_constraintBottom_toTopOf="@+id/addTripActivityFromSpinner"
+        app:layout_constraintBottom_toTopOf="@+id/textView8"
         app:layout_constraintStart_toStartOf="@+id/addTripActivityFromSpinner"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -55,31 +57,50 @@
         android:layout_height="0dp"
         android:text="Destination"
         app:layout_constraintBottom_toTopOf="@+id/addTripActivityWhereSpinner"
-        app:layout_constraintEnd_toStartOf="@+id/addTripActivityTextView"
+        app:layout_constraintEnd_toEndOf="@+id/textView13"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/addTripActivityFromSpinner" />
+        app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
     <Button
         android:id="@+id/addTripActivityDateButton"
         android:layout_width="144dp"
         android:layout_height="0dp"
-        android:layout_marginStart="108dp"
-        android:layout_marginBottom="72dp"
+        android:layout_marginBottom="14dp"
         android:onClick="goCalender"
         android:text="Select Departure Date"
         app:layout_constraintBottom_toTopOf="@+id/addTripActivityAddTripButton"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/addTripActivityTextView" />
 
     <TextView
         android:id="@+id/addTripActivityTextView"
-        android:layout_width="0dp"
+        android:layout_width="144dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="43dp"
+        android:layout_marginBottom="18dp"
         android:text="Date Time"
         app:layout_constraintBottom_toTopOf="@+id/addTripActivityDateButton"
-        app:layout_constraintEnd_toEndOf="@+id/addTripActivityDateButton"
-        app:layout_constraintStart_toStartOf="@+id/addTripActivityDateButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/addTripActivityBusPlateSpinner" />
+
+    <TextView
+        android:id="@+id/textView13"
+        android:layout_width="108dp"
+        android:layout_height="0dp"
+        android:text="Bus Plate"
+        app:layout_constraintBottom_toTopOf="@+id/addTripActivityBusPlateSpinner"
+        app:layout_constraintStart_toStartOf="@+id/addTripActivityBusPlateSpinner"
         app:layout_constraintTop_toBottomOf="@+id/addTripActivityWhereSpinner" />
+
+    <Spinner
+        android:id="@+id/addTripActivityBusPlateSpinner"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="28dp"
+        app:layout_constraintBottom_toTopOf="@+id/addTripActivityTextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView13" />
 
 </android.support.constraint.ConstraintLayout>
