--- a/Project_Android_Trustbus/TrustBusSe301Project/app/src/main/res/layout/activity_list_trips_for_customer.xml
+++ b/Project_Android_Trustbus/TrustBusSe301Project/app/src/main/res/layout/activity_list_trips_for_customer.xml
@@ -12,7 +12,7 @@
         android:layout_height="369dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="5dp"
         android:layout_marginBottom="41dp"
         app:layout_constraintBottom_toTopOf="@+id/activityListTripsForCustomerBuyButton"
         app:layout_constraintEnd_toEndOf="parent"
@@ -23,10 +23,11 @@
         android:id="@+id/activityListTripsForCustomerBuyButton"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="47dp"
-        android:onClick="deleteWrittenTrip"
-        android:text="Delete Trip"
+        android:layout_marginTop="2dp"
+        android:layout_marginEnd="17dp"
+        android:layout_marginBottom="46dp"
+        android:onClick="buyTrip"
+        android:text="Buy Ticket"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/activityListTripForCustomerObjectIdTextUpdateTrip"
