--- a/Project_Android_Trustbus/TrustBusSe301Project/app/src/main/res/layout/activity_seat_selection.xml
+++ b/Project_Android_Trustbus/TrustBusSe301Project/app/src/main/res/layout/activity_seat_selection.xml
@@ -69,17 +69,41 @@
         android:id="@+id/textView17"
         android:layout_width="57dp"
         android:layout_height="20dp"
-        android:layout_marginStart="12dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="8dp"
+        android:text="Avaible Seat"
+        android:textColor="@android:color/black"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.006"
+        app:layout_constraintStart_toEndOf="@+id/imageViewAvaible"
+        app:layout_constraintTop_toBottomOf="@+id/layoutSeat" />
+
+    <TextView
+        android:id="@+id/textViewSelectedSeats"
+        android:layout_width="116dp"
+        android:layout_height="19dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:text="Selected Seat(s):"
+        android:textColor="@android:color/black"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageViewBooked" />
+
+    <TextView
+        android:id="@+id/textViewSelectedSeatsNumber"
+        android:layout_width="19dp"
+        android:layout_height="19dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="12dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:text="Avaible Seat"
-        android:textColor="@android:color/black"
+        android:text="0"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/imageViewAvaible"
-        app:layout_constraintTop_toBottomOf="@+id/layoutSeat"
+        app:layout_constraintHorizontal_bias="0.014"
+        app:layout_constraintStart_toEndOf="@+id/textViewSelectedSeats"
+        app:layout_constraintTop_toBottomOf="@+id/textView17"
         app:layout_constraintVertical_bias="0.0" />
 
 
