--- a/Project_Android_Trustbus/TrustBusSe301Project/app/src/main/res/layout/activity_add_booking.xml
+++ b/Project_Android_Trustbus/TrustBusSe301Project/app/src/main/res/layout/activity_add_booking.xml
@@ -22,9 +22,9 @@
         android:id="@+id/textView11"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="45dp"
+        android:layout_marginBottom="3dp"
         android:text="From"
-        app:layout_constraintBottom_toTopOf="@+id/textView12"
+        app:layout_constraintBottom_toTopOf="@+id/addBookingActivityFromSpinner"
         app:layout_constraintEnd_toEndOf="@+id/textView12"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/addBookingActivityUsername" />
@@ -32,83 +32,113 @@
     <Spinner
         android:id="@+id/addBookingActivityFromSpinner"
         android:layout_width="0dp"
-        android:layout_height="44dp"
+        android:layout_height="0dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="90dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="89dp"
-        app:layout_constraintBottom_toBottomOf="@+id/addBookingActivityDestinationSpinner"
+        android:layout_marginBottom="50dp"
+        app:layout_constraintBottom_toTopOf="@+id/addBookingActivityDestinationSpinner"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/addBookingActivityUsername" />
+        app:layout_constraintTop_toBottomOf="@+id/textView11" />
 
     <TextView
         android:id="@+id/textView12"
         android:layout_width="105dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="110dp"
+        android:layout_height="44dp"
+        android:layout_marginTop="42dp"
+        android:layout_marginBottom="52dp"
         android:text="Destination"
-        app:layout_constraintBottom_toTopOf="@+id/addBookingActivityDateButton"
+        app:layout_constraintBottom_toBottomOf="@+id/addBookingActivityDestinationSpinner"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView11" />
+        app:layout_constraintTop_toTopOf="@+id/addBookingActivityFromSpinner" />
 
     <Spinner
         android:id="@+id/addBookingActivityDestinationSpinner"
         android:layout_width="0dp"
-        android:layout_height="44dp"
+        android:layout_height="0dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="9dp"
+        app:layout_constraintBottom_toTopOf="@+id/addBookingActivityTextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/addBookingActivityFromSpinner" />
 
     <TextView
         android:id="@+id/addBookingActivityTextView"
-        android:layout_width="82dp"
+        android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="66dp"
-        android:text="Date/ Time"
-        app:layout_constraintBottom_toTopOf="@+id/addBookingActivityAddBookingSpinner"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="100dp"
+        android:layout_marginBottom="2dp"
+        android:text="Date"
+        app:layout_constraintBottom_toTopOf="@+id/addBookingActivityDateButton"
+        app:layout_constraintEnd_toStartOf="@+id/addBookingActivityTimeView"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/addBookingActivityUsername" />
+        app:layout_constraintTop_toBottomOf="@+id/addBookingActivityDestinationSpinner" />
 
     <Button
         android:id="@+id/addBookingActivityDateButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="128dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginEnd="93dp"
+        android:layout_marginBottom="124dp"
         android:onClick="moveBookingCalendar"
-        android:text="Select Departure Date"
+        android:text="Select  Date"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/addBookingActivityTimeButton"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView12" />
+        app:layout_constraintTop_toBottomOf="@+id/addBookingActivityTextView" />
 
     <Button
         android:id="@+id/addBookingActivityAddBookingSpinner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="64dp"
+        android:layout_marginStart="107dp"
+        android:layout_marginEnd="107dp"
+        android:layout_marginBottom="51dp"
         android:onClick="addBooking"
         android:text="Add Bookıng"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/addBookingActivityTextView" />
+        app:layout_constraintEnd_toEndOf="@+id/addBookingActivityTimeButton"
+        app:layout_constraintStart_toStartOf="@+id/addBookingActivityTextView"
+        app:layout_constraintTop_toBottomOf="@+id/addBookingActivityTimeButton" />
 
     <EditText
         android:id="@+id/addBookingActivityUsername"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="45dp"
-        android:layout_marginBottom="192dp"
+        android:layout_marginBottom="194dp"
         android:ems="10"
         android:hint="email"
         android:inputType="textEmailAddress"
-        app:layout_constraintBottom_toTopOf="@+id/addBookingActivityTextView"
+        app:layout_constraintBottom_toTopOf="@+id/addBookingActivityTimeView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/addBookingActivityTimeView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginEnd="39dp"
+        android:layout_marginBottom="5dp"
+        android:text="Time"
+        app:layout_constraintBottom_toTopOf="@+id/addBookingActivityTimeButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/addBookingActivityTextView"
+        app:layout_constraintTop_toBottomOf="@+id/addBookingActivityUsername" />
+
+    <Button
+        android:id="@+id/addBookingActivityTimeButton"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginEnd="39dp"
+        android:layout_marginBottom="23dp"
+        android:text="Select Tıme"
+        app:layout_constraintBottom_toTopOf="@+id/addBookingActivityAddBookingSpinner"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/addBookingActivityDateButton"
+        app:layout_constraintTop_toBottomOf="@+id/addBookingActivityTimeView" />
 </android.support.constraint.ConstraintLayout>
