--- a/Project_Android_Trustbus/TrustBusSe301Project/app/src/main/res/layout/activity_list_trips_for_admin_for_update_trip.xml
+++ b/Project_Android_Trustbus/TrustBusSe301Project/app/src/main/res/layout/activity_list_trips_for_admin_for_update_trip.xml
@@ -8,13 +8,13 @@
 
     <ListView
         android:id="@+id/listViewCustomerBuyTrip"
-        android:layout_width="0dp"
-        android:layout_height="326dp"
+        android:layout_width="363dp"
+        android:layout_height="0dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="11dp"
-        app:layout_constraintBottom_toTopOf="@+id/textView11"
+        android:layout_marginBottom="139dp"
+        app:layout_constraintBottom_toTopOf="@+id/listTripsForAdminTimeButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -22,7 +22,8 @@
     <Button
         android:id="@+id/activityListTripsForCustomerBuyButton"
         android:layout_width="0dp"
-        android:layout_height="42dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="3dp"
         android:onClick="updateTrip"
         android:text="Update Trip"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -34,82 +35,107 @@
         android:id="@+id/activityListTripForCustomerObjectIdTextUpdateTrip"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="21dp"
+        android:layout_marginBottom="16dp"
         android:ems="10"
         android:hint="Write Object Id"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toTopOf="@+id/activityListTripsForCustomerBuyButton"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/listTipsActivityForAdminForUpdateDestinationSpinner"
-        app:layout_constraintTop_toBottomOf="@+id/listTripForAdminFroUpdateTripDepartureDateButton" />
+        app:layout_constraintEnd_toStartOf="@+id/listTripsForAdminTimeButton"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/listTripsForAdminTimeText" />
 
     <Spinner
         android:id="@+id/listTipsActivityForAdminForUpdateDestinationSpinner"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginEnd="36dp"
-        android:layout_marginBottom="11dp"
-        app:layout_constraintBottom_toTopOf="@+id/activityListTripsForCustomerBuyButton"
-        app:layout_constraintEnd_toStartOf="@+id/activityListTripForCustomerObjectIdTextUpdateTrip"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="23dp"
+        app:layout_constraintEnd_toStartOf="@+id/listTripsForAdminTimeText"
+        app:layout_constraintHorizontal_chainStyle="spread_inside"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
     <Spinner
         android:id="@+id/listTripsForAdminForUpdateFromSpinner"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginEnd="36dp"
-        app:layout_constraintBottom_toTopOf="@+id/textView5"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="26dp"
+        app:layout_constraintBottom_toBottomOf="@+id/listTripActivityForAdminForUpdateTripDateText"
         app:layout_constraintEnd_toStartOf="@+id/listTripForAdminFroUpdateTripDepartureDateButton"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView11" />
+        app:layout_constraintTop_toBottomOf="@+id/listTripActivityForAdminForUpdateTripDateText" />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="147dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="119dp"
         android:text="Destination"
-        app:layout_constraintBottom_toTopOf="@+id/listTipsActivityForAdminForUpdateDestinationSpinner"
-        app:layout_constraintEnd_toStartOf="@+id/activityListTripForCustomerObjectIdTextUpdateTrip"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintBottom_toTopOf="@+id/listTripsForAdminTimeText"
+        app:layout_constraintEnd_toStartOf="@+id/listTripForAdminFroUpdateTripDepartureDateButton"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/listTripsForAdminForUpdateFromSpinner" />
+        app:layout_constraintTop_toBottomOf="@+id/listTripForAdminFroUpdateTripDepartureDateButton" />
 
     <TextView
         android:id="@+id/textView11"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="184dp"
-        android:layout_marginBottom="2dp"
+        android:layout_marginStart="11dp"
+        android:layout_marginEnd="153dp"
+        android:layout_marginBottom="20dp"
         android:text="From"
-        app:layout_constraintBottom_toTopOf="@+id/listTripsForAdminForUpdateFromSpinner"
-        app:layout_constraintEnd_toStartOf="@+id/listTripForAdminFroUpdateTripDepartureDateButton"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintBottom_toTopOf="@+id/listTripForAdminFroUpdateTripDepartureDateButton"
+        app:layout_constraintEnd_toStartOf="@+id/listTripActivityForAdminForUpdateTripDateText"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/listViewCustomerBuyTrip" />
 
     <Button
         android:id="@+id/listTripForAdminFroUpdateTripDepartureDateButton"
         android:layout_width="0dp"
-        android:layout_height="38dp"
-        android:layout_marginEnd="9dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="45dp"
         android:onClick="goCalender"
         android:text="Departure Date"
-        app:layout_constraintBottom_toTopOf="@+id/activityListTripForCustomerObjectIdTextUpdateTrip"
+        app:layout_constraintBottom_toTopOf="@+id/textView5"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/listTripsForAdminForUpdateFromSpinner"
-        app:layout_constraintTop_toBottomOf="@+id/listTripActivityForAdminForUpdateTripDateText" />
+        app:layout_constraintStart_toEndOf="@+id/textView5"
+        app:layout_constraintTop_toBottomOf="@+id/textView11" />
 
     <TextView
         android:id="@+id/listTripActivityForAdminForUpdateTripDateText"
         android:layout_width="0dp"
-        android:layout_height="32dp"
-        android:layout_marginTop="353dp"
-        android:layout_marginBottom="2dp"
-        android:text="Selected Date Time"
+        android:layout_height="0dp"
+        android:layout_marginEnd="16dp"
+        android:text="Selected Date"
         app:layout_constraintBottom_toTopOf="@+id/listTripForAdminFroUpdateTripDepartureDateButton"
-        app:layout_constraintEnd_toEndOf="@+id/listTripForAdminFroUpdateTripDepartureDateButton"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/listTripForAdminFroUpdateTripDepartureDateButton"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textView11"
+        app:layout_constraintTop_toTopOf="@+id/textView11" />
+
+    <TextView
+        android:id="@+id/listTripsForAdminTimeText"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginEnd="20dp"
+        android:text="Selected Time"
+        app:layout_constraintBottom_toTopOf="@+id/activityListTripForCustomerObjectIdTextUpdateTrip"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/listTipsActivityForAdminForUpdateDestinationSpinner"
+        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+
+    <Button
+        android:id="@+id/listTripsForAdminTimeButton"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="47dp"
+        android:layout_marginBottom="40dp"
+        android:text="departure tıme"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/activityListTripForCustomerObjectIdTextUpdateTrip"
+        app:layout_constraintTop_toBottomOf="@+id/listViewCustomerBuyTrip" />
 </android.support.constraint.ConstraintLayout>
