--- a/Project_Android_Trustbus/TrustBusSe301Project/app/src/main/res/layout/activity_payment.xml
+++ b/Project_Android_Trustbus/TrustBusSe301Project/app/src/main/res/layout/activity_payment.xml
@@ -10,8 +10,8 @@
         android:id="@+id/activityPaymentCardNumber"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="69dp"
-        android:layout_marginTop="83dp"
+        android:layout_marginStart="84dp"
+        android:layout_marginTop="88dp"
         android:ems="10"
         android:hint="Card Number"
         android:inputType="number"
@@ -34,11 +34,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="37dp"
+        android:layout_marginBottom="64dp"
         android:onClick="makePayment"
         android:text="buy"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/activityPaymentSurname"
         app:layout_constraintStart_toStartOf="@+id/activityPaymentSurname"
-        app:layout_constraintTop_toBottomOf="@+id/activityPaymentSurname" />
+        app:layout_constraintTop_toBottomOf="@+id/ActivityPaymentTextView" />
 
     <EditText
         android:id="@+id/activityPaymentName"
@@ -61,4 +63,19 @@
         android:inputType="textPersonName"
         app:layout_constraintStart_toStartOf="@+id/activityPaymentName"
         app:layout_constraintTop_toBottomOf="@+id/activityPaymentName" />
+
+    <TextView
+        android:id="@+id/ActivityPaymentTextView"
+        android:layout_width="206dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="19dp"
+        android:layout_marginBottom="346dp"
+        android:gravity="center"
+        android:text="-15$"
+        android:textColor="#0033ff"
+        android:textSize="30dp"
+        app:layout_constraintBottom_toTopOf="@+id/activityPaymentPayButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
